Update 'mmm3yjkrg-go' component image to: quay.io/rhtap_qe/rhtap-qe-go:c9f2da9ec44a1c8658d5de6dae9b1aa337932689@sha256:9478f35a53b78088d9f3ef349fee4cbd90342339cab53a3e719c818ef3e2ad6b

--- a/components/mmm3yjkrg-go/overlays/development/deployment-patch.yaml
+++ b/components/mmm3yjkrg-go/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: mmm3yjkrg-go
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe-go:c9f2da9ec44a1c8658d5de6dae9b1aa337932689@sha256:9478f35a53b78088d9f3ef349fee4cbd90342339cab53a3e719c818ef3e2ad6b
+          name: container-image
